--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.8'
+    - run: pip install pytest
     - run: pytest
 
 # release: TODO
