--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -24,8 +24,14 @@ jobs:
   update_version_publish:
     name: Increment Version and Publish
     runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.8'
     - uses: reecetech/version-increment@2024.4.3
       id: version
       with:
@@ -47,8 +53,11 @@ jobs:
       id: update_version
       run: |
         sed -i "s/{{VERSION_NUMBER}}/${{ steps.version.outputs.version }}/" pyproject.toml
+    - name: Build Project
+      id: build
+      run: |
+        python3 -m pip install --upgrade build
+        python3 -m build
     - name: Publish to PyPi
       id: publish_pypi
-      run: |
-        cat pyproject.toml
-      # TODO: Add the command to publish to PyPi
+      uses: pypa/gh-action-pypi-publish@release/v1
