ci: Show PyPi URL

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -44,7 +44,7 @@ jobs:
         tag_name: ${{ steps.version.outputs.v-version }}
         release_name: Release ${{ steps.version.outputs.version }}
         body: |
-          Release: ${{ steps.version.outputs.version }}
+          See https://pypi.org/project/astrosampler/${{ steps.version.outputs.version }}/
         draft: false
         prerelease: false
     - name: Update Version in File
