--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -13,3 +13,14 @@ jobs:
         with:
           task_types: '["feat","fix","docs","test","ci","chore","revert"]'
           add_label: 'false'
+
+  tests:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.8'
+    - run: pip install pytest
+    - run: pytest
